<resources>

    <string name="app_name">Eventy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="menu_register">Register</string>
    <string name="menu_add_service">Add service</string>
    <string name="menu_edit_service">Edit service</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="notifications">Notifications</string>

    <!-- /home -->
    <string name="service_and_products">Solutions</string>
    <string name="featured">FEATURED</string>
    <string name="events">Events</string>
    <string name="services">SERVICES</string>
    <string name="products">PRODUCTS</string>
    <string name="amp"><![CDATA[&]]></string>

    <!-- /home/events{event_card} -->
    <string name="open_event">OPEN EVENT!</string>
    <string name="event_card_see_more">SEE MORE</string>
    <string name="event_description">Description:</string>
    <string name="favorite">favorite</string>
    <string name="event_name"><![CDATA[“Mark & Mia’s Wedding”]]></string>
    <string name="event_description_text">Welcome to Mirko and Jana’s wedding. The wedding will be in our fancy vineyard. All you need to bring is a positive mood! We encourage you…</string>
    <string name="event_type">Type: wedding</string>
    <string name="event_max_participants">Max participans: 530</string>
    <string name="event_date">24.10.2024.</string>
    <string name="event_location">Belgrade, Serbia</string>

    <!-- /home/events/featured(top 5) -->
    <string name="browse_all_events_text">Don’t see anything you like? Browse all events down below!</string>

    <!-- /home/events -->
    <string name="filter">Filters</string>
    <string name="sort">Sort</string>

    <!-- /home/solutions{solution_card} -->
    <string name="solution_price_before_discount">339</string>
    <string name="solution_current_price">309</string>
    <string name="event_types_label">Event types:</string>
    <string name="event_type1">Birthday</string>
    <string name="event_type2">Wedding</string>
    <string name="three_dots">...</string>
    <string name="euro_symbol">€</string>

    <!-- /home/products{product_card} -->
    <string name="product_name">Sweet 16 - cake</string>
    <string name="product_category">Category: cakes</string>
    <string name="product_description_text">Best cake in town! Buy and see! ONLY LEGIT! BEST QULAITY, COME AND SEE!!</string>

    <!-- /home/services{service_card} -->
    <string name="service_name">Bon Jovi</string>
    <string name="service_category">Category: music</string>
    <string name="service_duration">Duration: 1h-5h</string>
    <string name="service_reservation_type">Reservation: manual</string>

    <!-- /home/events[filter] -->
    <string name="event_filters_text">Event Filters</string>
    <string name="reset_filter">Reset All</string>

    <string name="select_date">SELECT DATE 🗓️</string>
    <string name="select_max_participants"><font size="15">Select a number..</font></string>

    <string name="add_service_title">Add a new service</string>
    <string name="organize_event">Organize event</string>

    <!-- /events/organize/invite-people -->
    <string name="invite_people">The last step is to invite the people you want to share your event with!</string>
    <string name="add_new_person">Add new person:</string>
    <string name="added_people">Added people:</string>

    <string name="category_management">Category management</string>
    <string name="add_category_button">Add category</string>
    <string name="edit_category_button">Edit category</string>
    <string name="add_category_label">Add category</string>
    <string name="edit_category_label">Edit category</string>

    <!-- /users/fast-registration -->
    <string name="fast_registration_text1">You’ve been invited to an event, and a temporary account has been created for you using \"example@gmail.com\"!</string>
    <string name="fast_registration_text2">In order to accept the event and access the details, please fill the required fields down below. After completing the registration, your account will be fully created and you will be able to access the event!</string>

    <!-- /services/create-reservation -->
    <string name="reservation_creation_time_hint">The end time will be calculated automatically if the service duration is fixed!</string>

    <!-- /categories -->
    <string name="active_categories">Active categories</string>
    <string name="category_requests">Requests</string>
    
    <string name="allocated_funds">Allocated:</string>
    <string name="used_funds">Used:</string>
    <string name="remainder">Remainder:</string>
</resources>