<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/profile"
        android:icon="@drawable/icon_profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_messages"
        android:orderInCategory="100"
        android:title="@string/messages"
        android:icon="@drawable/icon_messages"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_notifications"
        android:orderInCategory="100"
        android:title="@string/notifications"
        android:icon="@drawable/icon_notifications"
        app:showAsAction="always" />
</menu>