<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/icon_event_photo"
            android:title="@string/menu_login" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/icon_register"
            android:title="@string/menu_register" />
        <item
            android:id="@+id/nav_manipulate_service"
            android:icon="@drawable/service_add_icon"
            android:title="@string/menu_add_service" />
        <item
            android:id="@+id/nav_event_organization"
            android:icon="@drawable/icon_organize_event"
            android:title="@string/organize_event" />
        <item
            android:id="@+id/nav_event_types"
            android:icon="@drawable/icon_types"
            android:title="Event Types"/>
        <item
            android:id="@+id/nav_event_stats"
            android:icon="@drawable/icon_bar_chart"
            android:title="Event Stats"/>
        <item
            android:id="@+id/nav_pending_reviews"
            android:icon="@drawable/icon_pending_reviews"
            android:title="Pending Reviews"/>
        <item
            android:id="@+id/nav_pending_reports"
            android:icon="@drawable/icon_pending_reviews"
            android:title="Pending Reports"/>
        <item
            android:id="@+id/nav_product_creation"
            android:icon="@drawable/icon_add_product"
            android:title="Add Product"/>
        <item
            android:id="@+id/nav_pricelist"
            android:icon="@drawable/icon_organize_event"
            android:title="Pricelist"/>
        <item
            android:id="@+id/nav_category_home"
            android:icon="@drawable/category_management_icon"
            android:title="Category Management"/>
    </group>
</menu>