<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/event_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp">

    <!-- event card container -->
    <LinearLayout
        android:id="@+id/card_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/event_card_white_background"
        android:elevation="2dp"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- left side of card -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/left_side"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/event_card_blue_stripe_background"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingEnd="10dp">

            <!-- event name container -->
            <FrameLayout
                android:id="@+id/event_name_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/event_card_name_container_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- event name -->
                <TextView
                    android:id="@+id/event_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/albert_sans"
                    android:paddingBottom="8dp"
                    android:text="@string/event_name"
                    android:textFontWeight="800"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </FrameLayout>

            <!-- event type -->
            <TextView
                android:id="@+id/event_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_type"
                android:fontFamily="@font/albert_sans"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:textColor="@color/home_event_card_label"
                android:textFontWeight="600"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_name_container" />

            <!-- max participants text -->
            <TextView
                android:id="@+id/max_participants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/albert_sans"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:maxLines="1"
                android:textColor="@color/home_event_card_text"
                android:text="@string/event_max_participants"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/event_type" />

            <!-- date container -->
            <LinearLayout
                android:id="@+id/date_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/max_participants" >

                <!-- date icon -->
                <View
                    android:id="@+id/icon_date"
                    android:layout_width="19dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/icon_calendar" />

                <!-- date text -->
                <TextView
                    android:id="@+id/event_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_date"
                    android:maxLines="1"
                    android:textSize="15sp"
                    android:textColor="@color/home_event_card_text"
                    android:fontFamily="@font/albert_sans"
                    app:layout_constraintStart_toStartOf="parent"/>
            </LinearLayout>

            <!-- location container -->
            <LinearLayout
                android:id="@+id/location_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/date_container">

                <!-- location icon -->
                <View
                    android:id="@+id/icon_location"
                    android:layout_width="19dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/icon_location" />

                <!-- location text -->
                <TextView
                    android:id="@+id/event_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_location"
                    android:maxLines="1"
                    android:textSize="15sp"
                    android:textColor="@color/home_event_card_text"
                    android:fontFamily="@font/albert_sans"
                    app:layout_constraintStart_toStartOf="parent"/>
            </LinearLayout>

            <!-- open/full event label -->
            <TextView
                android:id="@+id/open_or_full"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:fontFamily="@font/albert_sans"
                android:letterSpacing="0.02"
                android:text="@string/open_event"
                android:textColor="@color/home_event_card_open_event"
                android:textFontWeight="900"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location_container" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- right side of card -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/right_side"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/event_card_white_background">

            <!-- favorite & see more buttons container -->
            <LinearLayout
                android:id="@+id/buttons_container"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- favorite button -->
                <Button
                    android:id="@+id/favorite_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/icon_favorite"
                    android:text="@string/favorite" />

                <!-- see more button -->
                <Button
                    android:id="@+id/see_more_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="3.05"
                    android:background="@drawable/event_card_see_more_border"
                    android:fontFamily="@font/albert_sans"
                    android:letterSpacing="0.03"
                    android:text="@string/event_card_see_more"
                    android:padding="0dp"
                    android:textAllCaps="false"
                    android:textColor="@color/home_event_card_see_more"
                    android:textFontWeight="900"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- description container -->
            <LinearLayout
                android:id="@+id/description_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/event_card_description_background"
                android:padding="12dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:elevation="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttons_container">

                <!-- description label -->
                <TextView
                    android:id="@+id/decription_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/home_event_card_label"
                    android:text="@string/event_description"
                    android:fontFamily="@font/albert_sans"
                    android:textSize="15sp"
                    android:textFontWeight="700"/>

                <!-- description text -->
                <TextView
                    android:id="@+id/description"
                    android:layout_marginTop="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/event_description_text"
                    android:maxLines="5"
                    android:fontFamily="@font/albert_sans"
                    android:textColor="@color/home_event_card_text"
                    />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

